--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Site Inicial</title>
     <style>
         body {
+            background: bisque;
             font: normal 12pt Arial;
         }
     </style>
