--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Site Inicial</title>
     <style>
         body {
-            background: bisque;
+            background: rgb(255, 255, 255);
             font: normal 12pt Arial;
         }
     </style>
