Melhoria usando CSS3

--- a/index.html
+++ b/index.html
@@ -5,34 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Site Inicial</title>
-    <style>
-        body {
-            background: rgb(255, 255, 255);
-            font: normal 12pt Arial;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Minhas redes sociais</h1>
-    <h2>Quem Sou eu?</h2>
-    <img src="fotoms2.jpeg" alt="Imagem não encontrada">
-    <br>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente illum, nulla natus cumque est, similique quisquam consequuntur quam et quas odio sint reiciendis, distinctio laudantium! Dignissimos possimus voluptas voluptatum quibusdam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores commodi delectus aspernatur nisi est beatae quisquam hic magni! Odit perferendis itaque deserunt blanditiis aliquam, delectus accusamus tempora et vel doloremque!</p>
-    <h2>Como falar comigo?</h2>
-    <ul>
-        <li>
-            <p><img src="icon-github.png" alt="Imagem não encontrada">/<a href="https://github.com/ebert-g" target="_blank" rel="external"><strong>ebert-g</strong></a> - Acesse meu repositório público no GitHub</p>
-        </li>
-
-        <li>
-            <p><img src="icon-insta.png" alt="Não Encontrado">/<a href="https://www.instagram.com/ebert_guerreiro?igsh=MWhrNHo3NGQ5cjVsYw%3D%3D&utm_source=qr" target="_blank" rel="external"><strong>@ebert-guerreiro</strong></a> - Acesse meu instagram</p>
-        </li>
-
-        <li>
-            <p><img src="icons8-whatsapp-18.png" alt="Img não encontrada">/ <strong><a href="https://wa.me/qr/IFONT4XYIOVVC1" target="_blank" rel="external">Ebert Guerreiro</a></strong> - Fale comigo através do Whatsapp</p>
-        </li>
-    </ul>
- </p>
+    <header>
+        <h1>Minhas redes sociais</h1>
+    </header>
+    <div class="sect" id="sect1">
+        <h2>Quem Sou eu?</h2>
+        <img src="fotoms2.jpeg" alt="Imagem não encontrada">
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente illum, nulla natus cumque est, similique quisquam consequuntur quam et quas odio sint reiciendis, distinctio laudantium! Dignissimos possimus voluptas voluptatum quibusdam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores commodi delectus aspernatur nisi est beatae quisquam hic magni! Odit perferendis itaque deserunt blanditiis aliquam, delectus accusamus tempora et vel doloremque!</p>
+</div>
+    <div class="sect">
+        <h2>Como falar comigo?</h2>
+        <ul>
+            <li>
+                <p><img src="icon-github.png" alt="Imagem não encontrada">/<a href="https://github.com/ebert-g" target="_blank" rel="external"><strong>ebert-g</strong></a> - Acesse meu repositório público no GitHub</p>
+            </li>
+            <li>
+                <p><img src="icon-insta.png" alt="Não Encontrado">/<a href="https://www.instagram.com/ebert_guerreiro?igsh=MWhrNHo3NGQ5cjVsYw%3D%3D&utm_source=qr" target="_blank" rel="external"><strong>@ebert-guerreiro</strong></a> - Acesse meu instagram</p>
+            </li>
+            <li>
+                <p><img src="icons8-whatsapp-18.png" alt="Img não encontrada">/ <strong><a href="https://wa.me/qr/IFONT4XYIOVVC1" target="_blank" rel="external">Ebert Guerreiro</a></strong> - Fale comigo através do Whatsapp</p>
+            </li>
+        </ul>
+    </div>
+</p>
 </body>
 </html>
