--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Site Inicial</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Minhas redes sociais</h1>
-    </header>
-    <div class="sect" id="sect1">
-        <h2></h2>
-        <br>
-        <img src="fotoms2.jpeg" alt="Imagem não encontrada">
-        <br>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente illum, nulla natus cumque est, similique quisquam consequuntur quam et quas odio sint reiciendis, distinctio laudantium! Dignissimos possimus voluptas voluptatum quibusdam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores commodi delectus aspernatur nisi est beatae quisquam hic magni! Odit perferendis itaque deserunt blanditiis aliquam, delectus accusamus tempora et vel doloremque!</p>
-</div>
-    <div class="sect">
-        <h2></h2>
-        <ul>
-            <li>
-                <p><img src="icon-github.png" alt="Imagem não encontrada">/<a href="https://github.com/ebert-g" target="_blank" rel="external"><strong>ebert-g</strong></a> - Acesse meu repositório público no GitHub</p>
-            </li>
-            <li>
-                <p><img src="icon-insta.png" alt="Não Encontrado">/<a href="https://www.instagram.com/ebert_guerreiro?igsh=MWhrNHo3NGQ5cjVsYw%3D%3D&utm_source=qr" target="_blank" rel="external"><strong>@ebert-guerreiro</strong></a> - Acesse meu instagram</p>
-            </li>
-            <li>
-                <p><img src="icons8-whatsapp-18.png" alt="Img não encontrada">/ <strong><a href="https://wa.me/qr/IFONT4XYIOVVC1" target="_blank" rel="external">Ebert Guerreiro</a></strong> - Fale comigo através do Whatsapp</p>
-            </li>
-        </ul>
-    </div>
-</p>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <title>Site Inicial</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <header>
+            <h1>Minhas redes sociais</h1>
+        </header>
+
+        <article>
+            <div class="principal">
+                <img class="minhaft" src="img/ebert.jpeg" alt="" />
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ullam consectetur laborum provident eligendi numquam
+                    repellat? Minima ipsum debitis illum, est modi quis eum unde
+                    praesentium, suscipit eius aut illo fuga!
+                </p>
+            </div>
+        </article>
+    </body>
 </html>
+
+<!--
+<div class="sect">
+    <h2></h2>
+    <ul>
+        <li>
+            <p><img src="icon-github.png" alt="Imagem não encontrada">/<a href="https://github.com/ebert-g" target="_blank" rel="external"><strong>ebert-g</strong></a> - Acesse meu repositório público no GitHub</p>
+        </li>
+        <li>
+            <p><img src="icon-insta.png" alt="Não Encontrado">/<a href="https://www.instagram.com/ebert_guerreiro?igsh=MWhrNHo3NGQ5cjVsYw%3D%3D&utm_source=qr" target="_blank" rel="external"><strong>@ebert-guerreiro</strong></a> - Acesse meu instagram</p>
+        </li>
+        <li>
+            <p><img src="icons8-whatsapp-18.png" alt="Img não encontrada">/ <strong><a href="https://wa.me/qr/IFONT4XYIOVVC1" target="_blank" rel="external">Ebert Guerreiro</a></strong> - Fale comigo através do Whatsapp</p>
+        </li>
+    </ul>
+</div> -->
